kafka 데이터 관리 , zipkin, grafana 모니터링, 서비스가 작다면 배보다 배꼽이 커진다 ..