@@ -17,7 +17,6 @@ import org.springframework.stereotype.Component;
 import java.security.Key;
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static sideproject.fileservice.jwt.properties.JwtProperties.*;
 
@@ -28,10 +27,12 @@ public class JwtUtil {
 
     public Authentication getAuthentication(String accessToken) {
         Claims claims = extractAllClaims(accessToken);
-        Collection<? extends GrantedAuthority> authorities =
-                Arrays.stream(claims.get("roles").toString().split(","))
-                        .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+        List<Map<String, String>> roles = new ArrayList<>();
+        roles = (List<Map<String, String>>) claims.get("roles");
+
+        Collection<? extends GrantedAuthority> authorities = roles.stream()
+                .map(role -> new SimpleGrantedAuthority(role.get("authority")))
+                .toList();
 
         UserDetails userDetails = new User(getNickname(accessToken), "", authorities);
         return new UsernamePasswordAuthenticationToken(userDetails, "", authorities);
